[project]
name = "gpaccounttransfer"
version = "0.1.0"
description = "CLI tool to transfer an existing account to a new username, updating databases and server files. Useful for renames, merges, or account migrations (Java / Bedrock)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.2",
]

[project.scripts]
gp-account-transfer = "main:main"
